Fixed formatting: when the screen was too narrow, the position of the time labels did not match the position of the time slider, because the table was not using a fixed table-layout. In addition to the bug fix itself, make the formatting to better accomodate narrow screens with fewer time labels.

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -258,15 +258,27 @@ acronym {
 #time-scale {
 	width: 100%;
 	border-collapse: collapse;
+	table-layout: fixed;
 }
 #time-scale td {
 	width: 4.1666666666%;
-	padding-left: 5px;
 	/*height: 30px;
 	vertical-align: top;
 	padding-top: 3px;*/
+
+	overflow-x: hidden;
+	padding-left: 0;
+}
+#time-labels td {
+	border-left-width: 0px;
 	height: 20px;
+}
+#time-ticks td {
 	border-left: 1px solid #ccc;
+    height: 4px
+}
+#time-ticks td.thick {
+	border-left: 3px solid #999;
 }
 #time-scale td span {
 	color: #999;
